fix swagger for article, comment, and like
